Task_2/hb_task_2_ws/log/build_2023-10-18_12-18-37/hb_task2a/stdout_stderr.log
running egg_info
writing ../../../build/hb_task2a/hb_task2a.egg-info/PKG-INFO
writing dependency_links to ../../../build/hb_task2a/hb_task2a.egg-info/dependency_links.txt
writing entry points to ../../../build/hb_task2a/hb_task2a.egg-info/entry_points.txt
writing requirements to ../../../build/hb_task2a/hb_task2a.egg-info/requires.txt
writing top-level names to ../../../build/hb_task2a/hb_task2a.egg-info/top_level.txt
reading manifest file '../../../build/hb_task2a/hb_task2a.egg-info/SOURCES.txt'
writing manifest file '../../../build/hb_task2a/hb_task2a.egg-info/SOURCES.txt'
running build
running build_py
copying hb_task2a/feedback.py -> /home/adi/eyrc_hb/hb_task_2_ws/build/hb_task2a/build/lib/hb_task2a
running install
running install_lib
copying /home/adi/eyrc_hb/hb_task_2_ws/build/hb_task2a/build/lib/hb_task2a/feedback.py -> /home/adi/eyrc_hb/hb_task_2_ws/install/hb_task2a/lib/python3.10/site-packages/hb_task2a
byte-compiling /home/adi/eyrc_hb/hb_task_2_ws/install/hb_task2a/lib/python3.10/site-packages/hb_task2a/feedback.py to feedback.cpython-310.pyc
running install_data
running install_egg_info
  File "/home/adi/eyrc_hb/hb_task_2_ws/install/hb_task2a/lib/python3.10/site-packages/hb_task2a/feedback.py", line 47
    self.get_logger().info(f'Image converted : {cv_image.shape}}')
                                                                 ^
SyntaxError: f-string: single '}' is not allowed

removing '/home/adi/eyrc_hb/hb_task_2_ws/install/hb_task2a/lib/python3.10/site-packages/hb_task2a-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../../build/hb_task2a/hb_task2a.egg-info to /home/adi/eyrc_hb/hb_task_2_ws/install/hb_task2a/lib/python3.10/site-packages/hb_task2a-0.0.0-py3.10.egg-info
running install_scripts
Installing feedback script to /home/adi/eyrc_hb/hb_task_2_ws/install/hb_task2a/lib/hb_task2a
writing list of installed files to '/home/adi/eyrc_hb/hb_task_2_ws/build/hb_task2a/install.log'
